2008-01-03  Jakub Jelinek  <jakub@redhat.com>

	* ctype/ctype.h (__ctype_b_loc, __ctype_tolower_loc,
	__ctype_toupper_loc): Add __THROW.

2008-01-02  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/check_pf.c (make_request): Fix
	recognition of interface family.

	* posix/getconf.c: Update copyright year.
	* nss/getent.c: Likewise.
	* iconv/iconvconfig.c: Likewise.
	* iconv/iconv_prog.c: Likewise.
	* elf/ldconfig.c: Likewise.
	* catgets/gencat.c: Likewise.
	* csu/version.c: Likewise.
	* elf/ldd.bash.in: Likewise.
	* elf/sprof.c (print_version): Likewise.
	* locale/programs/locale.c: Likewise.
	* locale/programs/localedef.c: Likewise.
	* nscd/nscd.c (print_version): Likewise.
	* debug/xtrace.sh: Likewise.
	* malloc/memusage.sh: Likewise.
	* malloc/mtrace.pl: Likewise.
	* debug/catchsegv.sh: Likewise.

2007-12-26  Ulrich Drepper  <drepper@redhat.com>

	* nss/nsswitch.c (__nss_lookup): Actually use alternative name in
	second lookup.

2007-12-23  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/x86_64/cacheinfo.c (intel_02_known): New entry 0x3f.
	* sysdeps/unix/sysv/linux/i386/sysconf.c (intel_02_known): Likewise.

2007-12-17  Roland McGrath  <roland@redhat.com>

	* inet/ether_line.c (ether_line): Remove unused variable.

2007-12-17  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* login/forkpty.c (forkpty): Add const qualifier to parameters termp
	and winp.
	* login/openpty.c (openpty): Likewise.
	* login/pty.h (openpty, forkpty): Likewise.
	* manual/terminal.texi (openpty, forkpty): Likewise.

2007-12-17  Ulrich Drepper  <drepper@redhat.com>

	* malloc/malloc.c (public_cALLOc): For arena other than
	main_arena, count all bytes inside the mprotect_size range of the
	heap as uninitialized.

2007-12-16  Ulrich Drepper  <drepper@redhat.com>

	* elf/tst-execstack.c (do_test): Don't fail if SELinux forbids
	executable stacks.

	* malloc/malloc.c (public_mTRIm): Iterate over all arenas and call
	mTRIm for all of them.