@@ -1,3 +1,12 @@
+2008-01-07  Ulrich Drepper  <drepper@redhat.com>
+
+	* libio/stdio.h (vscanf): Fix definition for loser compilers.
+
+2008-01-05  Jakub Jelinek  <jakub@redhat.com>
+
+	[BZ #5112]
+	* nscd/connections.c (restart): Fix condition.
+
 2008-01-03  Jakub Jelinek  <jakub@redhat.com>
 
 	* ctype/ctype.h (__ctype_b_loc, __ctype_tolower_loc,
